# hardclip

./: CMakeLists.txt  README.md
src/: DecibelSlider.hpp  JuceHeader.hpp  PluginEditor.cpp  PluginEditor.hpp  PluginProcessor.cpp  PluginProcessor.hpp
